--- a/index.html
+++ b/index.html
@@ -7,31 +7,31 @@
 
   <body>
     <div class="flex-container">
-       <div class="flex-item">1</div>
-       <div class="flex-item2">2</div>
-       <div class="flex-item3">3</div>
-       <div class="flex-item">4</div>
-       <div class="flex-item5">5</div>
-       <div class="flex-item6">6</div>
-       <div class="flex-item7">7</div>
-       <div class="flex-item">8</div>
-       <div class="flex-item9">9</div>
-       <div class="flex-item10">10</div>
-       <div class="flex-item11">11</div>
-       <div class="flex-item">12</div>
-       <div class="flex-item13">13</div>
-       <div class="flex-item14">14</div>
-       <div class="flex-item">15</div>
-       <div class="flex-item16">16</div>
-       <div class="flex-item">17</div>
-       <div class="flex-item18">18</div>
-       <div class="flex-item19">19</div>
-       <div class="flex-item20">20</div>
-       <div class="flex-item21">21</div>
-       <div class="flex-item22">22</div>
-       <div class="flex-item23">23</div>
-       <div class="flex-item24">24</div>
-       <div class="flex-item25">25</div>
+       <div class="flex-item"></div>
+       <div class="flex-item2"></div>
+       <div class="flex-item3"></div>
+       <div class="flex-item"></div>
+       <div class="flex-item5"></div>
+       <div class="flex-item6"></div>
+       <div class="flex-item7"></div>
+       <div class="flex-item"></div>
+       <div class="flex-item9"></div>
+       <div class="flex-item10"></div>
+       <div class="flex-item11"></div>
+       <div class="flex-item"></div>
+       <div class="flex-item13"></div>
+       <div class="flex-item14"></div>
+       <div class="flex-item"></div>
+       <div class="flex-item16"></div>
+       <div class="flex-item"></div>
+       <div class="flex-item18"></div>
+       <div class="flex-item19"></div>
+       <div class="flex-item20"></div>
+       <div class="flex-item21"></div>
+       <div class="flex-item22"></div>
+       <div class="flex-item23"></div>
+       <div class="flex-item24"></div>
+       <div class="flex-item25"></div>
     </div>    
   </body>
 </html>
